--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,14 +26,14 @@
 {% else %}
   {% set linkage_nature_env = 'static' %}
 {% endif %}
-{% set dbg_abi = "" %}
-{% set debug = os.environ.get('PY_INTERP_DEBUG', '') %}
-{% if debug != '' and debug != 'no' %}
+{% if build_type == "debug" %}
   {% set py_interp_debug = "yes" %}
   {% set debug = "_dbg" %}
   {% set dbg_abi = "d" %}  # [win]
 {% else %}
   {% set py_interp_debug = "no" %}
+  {% set debug = "_dbg" %}
+  {% set dbg_abi = "" %}  # [win]
 {% endif %}
 
 package:
