--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -9,3 +9,9 @@ MACOSX_SDK_VERSION:            # [osx and x86_64]
 build_type:
   - release
   - debug
+channel_targets:
+  - conda-forge main
+  - conda-forge python_debug
+zip_keys:
+  - build_type
+  - channel_targets
