--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -12,3 +12,12 @@ vc:                            # [win]
   - 14.1                       # [win]
 MACOSX_SDK_VERSION:            # [osx and x86_64]
   - 11.0                       # [osx and x86_64]
+build_type:
+  - release
+  - debug
+channel_targets:
+  - conda-forge main
+  - conda-forge python_debug
+zip_keys:
+  - build_type
+  - channel_targets
