CI messes up windows debug builds
Co-authored-by: Marcel Bargull <mbargull@users.noreply.github.com>

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -84,7 +84,7 @@ source:
 
 build:
   number: {{ build_number }}
-  skip: true  # [win and build_type == "debug"]
+  skip: true  # [win and build_type != "release"]
 
 requirements:
   build:
