--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,9 +1,9 @@
 build_platform: {osx_arm64: osx_64}
-compiler_stack: comp7
 conda_forge_output_validation: true
-max_py_ver: '38'
-max_r_ver: '35'
 provider: {linux_aarch64: native, linux_ppc64le: native, osx: azure, win: azure}
 test_on_native_only: true
+github:
+  branch_name: main
+  tooling_branch_name: main
 conda_build:
   pkg_format: '2'
