--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -187,9 +187,9 @@ outputs:
 {% endif %}
     test:
       downstreams:
-        # Temporarily disable dowmstream tests on aarch64 as the solver causes timeouts on drone
-        - cython  # [not aarch64]
-        - setuptools  # [not aarch64]
+        # Temporarily disable downstream test for setuptools due to breaking changes
+        - cython
+        # - setuptools
       requires:
         - ripgrep
         - cmake
