--- a/.ci_support/linux_aarch64_.yaml
+++ b/.ci_support/linux_aarch64_.yaml
@@ -1,9 +1,13 @@
+BUILD:
+- aarch64-conda_cos7-linux-gnu
 bzip2:
 - '1'
 c_compiler:
 - gcc
 c_compiler_version:
-- '10'
+- '11'
+cdt_arch:
+- aarch64
 cdt_name:
 - cos7
 channel_sources:
@@ -13,9 +17,9 @@ channel_targets:
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '10'
+- '11'
 docker_image:
-- quay.io/condaforge/linux-anvil-ppc64le
+- quay.io/condaforge/linux-anvil-aarch64
 libffi:
 - '3.4'
 libuuid:
@@ -23,7 +27,7 @@ libuuid:
 ncurses:
 - '6'
 openssl:
-- 1.1.1
+- '3'
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -35,7 +39,9 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- linux-ppc64le
+- linux-aarch64
+tk:
+- '8.6'
 xz:
 - '5'
 zip_keys:
