--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -80,6 +80,7 @@ source:
       - patches/0022-unvendor-xz.patch
       - patches/0023-unvendor-zlib.patch
       - patches/0024-Do-not-pass-g-to-GCC-when-not-Py_DEBUG.patch
+      - patches/0025-Unvendor-expat.patch
 
 build:
   number: {{ build_number }}
@@ -180,6 +181,7 @@ outputs:
         - ld_impl_{{ target_platform }} >=2.36.1  # [linux]
         - libnsl  # [linux]
         - libuuid  # [linux]
+        - expat
       run:
         - ld_impl_{{ target_platform }} >=2.36.1  # [linux]
         - tzdata
