--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -8,10 +8,10 @@ MACOSX_SDK_VERSION:            # [osx and x86_64]
   - 11.0                       # [osx and x86_64]
 build_type:
   - release
-  - debug
+  - debug                      # [not win]
 channel_targets:
   - conda-forge main
-  - conda-forge python_debug
+  - conda-forge python_debug   # [not win]
 zip_keys:
   - build_type
   - channel_targets
