--- a/.ci_support/linux_64_build_typedebugchannel_targetsconda-forge_python_debug.yaml
+++ b/.ci_support/linux_64_build_typedebugchannel_targetsconda-forge_python_debug.yaml
@@ -18,6 +18,8 @@ cxx_compiler_version:
 - '11'
 docker_image:
 - quay.io/condaforge/linux-anvil-cos7-x86_64
+expat:
+- '2'
 libffi:
 - '3.4'
 libuuid:
