--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -1,5 +1,5 @@
 build_type:
-- debug
+- release
 bzip2:
 - '1'
 c_compiler:
@@ -10,6 +10,8 @@ channel_targets:
 - conda-forge main
 cxx_compiler:
 - vs2019
+expat:
+- '2'
 libffi:
 - '3.4'
 openssl:
