--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
-{% set version = "3.11.5" %}
-{% set dev = "" %}
-{% set dev_ = "" %}
+{% set version = "3.12.0" %}
+{% set dev = "rc1" %}
+{% set dev_ = "rc1_" %}
 {% set ver2 = '.'.join(version.split('.')[0:2]) %}
 {% set ver2nd = ''.join(version.split('.')[0:2]) %}
 {% set ver3nd = ''.join(version.split('.')[0:3]) %}
@@ -46,41 +46,32 @@ source:
 {% else %}
   - url: https://www.python.org/ftp/python/{{ version }}/Python-{{ version }}{{ dev }}.tar.xz
     # md5 from: https://www.python.org/downloads/release/python-{{ ver3nd }}/
-    md5: 393856f1b7713aa8bba4b642ab9985d3
+    md5: 6085d285160b2c94e1239d0afd42fdc8
 {% endif %}
     patches:
       - patches/0001-Win32-Change-FD_SETSIZE-from-512-to-2048.patch
-      - patches/0002-Win32-distutils-Add-support-to-cygwinccompiler-for-V.patch
-      # https://github.com/python/cpython/pull/28501
-      - patches/0003-bpo-45258-search-for-isysroot-in-addition-to-sysroot.patch
-      # https://github.com/pypa/distutils/pull/54
-      - patches/0004-runtime_library_dir_option-Use-1st-word-of-CC-as-com.patch
-      - patches/0005-Win32-Do-not-download-externals.patch
-      - patches/0006-Fix-find_library-so-that-it-looks-in-sys.prefix-lib-.patch
+      - patches/0006-Win32-Do-not-download-externals.patch
+      - patches/0007-Fix-find_library-so-that-it-looks-in-sys.prefix-lib-.patch
       # https://github.com/python/cpython/pull/28397
-      - patches/0007-bpo-22699-Allow-compiling-on-debian-ubuntu-with-a-di.patch
-      - patches/0008-Disable-registry-lookup-unless-CONDA_PY_ALLOW_REG_PA.patch
-      - patches/0009-Unvendor-openssl.patch
-      - patches/0010-Unvendor-sqlite3.patch
-      # https://github.com/pypa/distutils/pull/53
-      - patches/0011-Use-ranlib-from-env-if-env-variable-is-set.patch
-      - patches/0012-Add-CondaEcosystemModifyDllSearchPath.patch
-      - patches/0013-Add-d1trimfile-SRC_DIR-to-make-pdbs-more-relocatable.patch
-      - patches/0014-Doing-d1trimfile.patch
+      # Patch doesn't apply, but is Debian-specific anyway.
+      # - patches/0008-bpo-22699-Allow-compiling-on-debian-ubuntu-with-a-di.patch
+      - patches/0009-Disable-registry-lookup-unless-CONDA_PY_ALLOW_REG_PA.patch
+      - patches/0010-Unvendor-openssl.patch
+      - patches/0011-Unvendor-sqlite3.patch
+      - patches/0013-Add-CondaEcosystemModifyDllSearchPath.patch
+      - patches/0015-Doing-d1trimfile.patch
       # https://github.com/python/cpython/pull/23523
-      - patches/0015-cross-compile-darwin.patch
-      - patches/0016-Fix-TZPATH-on-windows.patch
+      - patches/0016-cross-compile-darwin.patch
+      - patches/0017-Fix-TZPATH-on-windows.patch
       # https://github.com/python/cpython/pull/24324
-      - patches/0017-Make-dyld-search-work-with-SYSTEM_VERSION_COMPAT-1.patch
-      # https://github.com/pypa/distutils/pull/53
-      - patches/0018-Fix-LDSHARED-when-CC-is-overriden-on-Linux-too.patch
-      - patches/0019-Unvendor-bzip2.patch
-      - patches/0020-Unvendor-libffi.patch
-      - patches/0021-Unvendor-tcltk.patch
-      - patches/0022-unvendor-xz.patch
-      - patches/0023-unvendor-zlib.patch
-      - patches/0024-Do-not-pass-g-to-GCC-when-not-Py_DEBUG.patch
-      - patches/0025-Unvendor-expat.patch
+      - patches/0018-Make-dyld-search-work-with-SYSTEM_VERSION_COMPAT-1.patch
+      - patches/0020-Unvendor-bzip2.patch
+      - patches/0021-Unvendor-libffi.patch
+      - patches/0022-Unvendor-tcltk.patch
+      - patches/0023-unvendor-xz.patch
+      - patches/0024-unvendor-zlib.patch
+      - patches/0025-Do-not-pass-g-to-GCC-when-not-Py_DEBUG.patch
+      - patches/0026-Remove-unused-readelf.patch
 
 build:
   number: {{ build_number }}
