--- a/.ci_support/linux_64_build_typedebugchannel_targetsconda-forge_python_rc_debug.yaml
+++ b/.ci_support/linux_64_build_typedebugchannel_targetsconda-forge_python_rc_debug.yaml
@@ -1,5 +1,5 @@
 build_type:
-- release
+- debug
 bzip2:
 - '1'
 c_compiler:
@@ -7,17 +7,17 @@ c_compiler:
 c_compiler_version:
 - '12'
 cdt_name:
-- cos7
+- cos6
 channel_sources:
 - conda-forge
 channel_targets:
-- conda-forge main
+- conda-forge python_rc_debug
 cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '12'
 docker_image:
-- quay.io/condaforge/linux-anvil-ppc64le
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 expat:
 - '2'
 libffi:
@@ -39,7 +39,9 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- linux-ppc64le
+- linux-64
+tk:
+- '8.6'
 xz:
 - '5'
 zip_keys:
