--- a/.ci_support/linux_64_build_typereleasechannel_targetsconda-forge_python_rc.yaml
+++ b/.ci_support/linux_64_build_typereleasechannel_targetsconda-forge_python_rc.yaml
@@ -1,29 +1,29 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
-MACOSX_SDK_VERSION:
-- '11.0'
 build_type:
 - release
 bzip2:
 - '1'
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '15'
+- '12'
+cdt_name:
+- cos6
 channel_sources:
 - conda-forge
 channel_targets:
-- conda-forge main
+- conda-forge python_rc
 cxx_compiler:
-- clangxx
+- gxx
 cxx_compiler_version:
-- '15'
+- '12'
+docker_image:
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 expat:
 - '2'
 libffi:
 - '3.4'
-macos_machine:
-- x86_64-apple-darwin13.4.0
+libuuid:
+- '2'
 ncurses:
 - '6'
 openssl:
@@ -39,7 +39,7 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- osx-64
+- linux-64
 tk:
 - '8.6'
 xz:
