--- a/.ci_support/linux_aarch64_build_typedebugchannel_targetsconda-forge_python_rc_debug.yaml
+++ b/.ci_support/linux_aarch64_build_typedebugchannel_targetsconda-forge_python_rc_debug.yaml
@@ -1,7 +1,7 @@
 BUILD:
 - aarch64-conda_cos7-linux-gnu
 build_type:
-- release
+- debug
 bzip2:
 - '1'
 c_compiler:
@@ -15,7 +15,7 @@ cdt_name:
 channel_sources:
 - conda-forge
 channel_targets:
-- conda-forge main
+- conda-forge python_rc_debug
 cxx_compiler:
 - gxx
 cxx_compiler_version:
