--- a/.ci_support/linux_aarch64_build_typereleasechannel_targetsconda-forge_python_rc.yaml
+++ b/.ci_support/linux_aarch64_build_typereleasechannel_targetsconda-forge_python_rc.yaml
@@ -1,3 +1,5 @@
+BUILD:
+- aarch64-conda_cos7-linux-gnu
 build_type:
 - release
 bzip2:
@@ -6,18 +8,20 @@ c_compiler:
 - gcc
 c_compiler_version:
 - '12'
+cdt_arch:
+- aarch64
 cdt_name:
-- cos6
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
-- conda-forge main
+- conda-forge python_rc
 cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '12'
 docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+- quay.io/condaforge/linux-anvil-aarch64
 expat:
 - '2'
 libffi:
@@ -39,7 +43,7 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- linux-64
+- linux-aarch64
 tk:
 - '8.6'
 xz:
