--- a/.ci_support/linux_ppc64le_build_typereleasechannel_targetsconda-forge_python_rc.yaml
+++ b/.ci_support/linux_ppc64le_build_typereleasechannel_targetsconda-forge_python_rc.yaml
@@ -1,5 +1,5 @@
 build_type:
-- debug
+- release
 bzip2:
 - '1'
 c_compiler:
@@ -7,17 +7,17 @@ c_compiler:
 c_compiler_version:
 - '12'
 cdt_name:
-- cos6
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
-- conda-forge python_debug
+- conda-forge python_rc
 cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '12'
 docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+- quay.io/condaforge/linux-anvil-ppc64le
 expat:
 - '2'
 libffi:
@@ -39,9 +39,7 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- linux-64
-tk:
-- '8.6'
+- linux-ppc64le
 xz:
 - '5'
 zip_keys:
