--- a/.ci_support/osx_64_build_typedebugchannel_targetsconda-forge_python_rc_debug.yaml
+++ b/.ci_support/osx_64_build_typedebugchannel_targetsconda-forge_python_rc_debug.yaml
@@ -1,7 +1,9 @@
 MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
+MACOSX_SDK_VERSION:
 - '11.0'
 build_type:
-- release
+- debug
 bzip2:
 - '1'
 c_compiler:
@@ -11,7 +13,7 @@ c_compiler_version:
 channel_sources:
 - conda-forge
 channel_targets:
-- conda-forge main
+- conda-forge python_rc_debug
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
@@ -21,7 +23,7 @@ expat:
 libffi:
 - '3.4'
 macos_machine:
-- arm64-apple-darwin20.0.0
+- x86_64-apple-darwin13.4.0
 ncurses:
 - '6'
 openssl:
@@ -37,7 +39,7 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- osx-arm64
+- osx-64
 tk:
 - '8.6'
 xz:
