--- a/.ci_support/osx_64_build_typereleasechannel_targetsconda-forge_python_rc.yaml
+++ b/.ci_support/osx_64_build_typereleasechannel_targetsconda-forge_python_rc.yaml
@@ -1,33 +1,29 @@
-BUILD:
-- aarch64-conda_cos7-linux-gnu
+MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
+MACOSX_SDK_VERSION:
+- '11.0'
 build_type:
-- debug
+- release
 bzip2:
 - '1'
 c_compiler:
-- gcc
+- clang
 c_compiler_version:
-- '12'
-cdt_arch:
-- aarch64
-cdt_name:
-- cos7
+- '15'
 channel_sources:
 - conda-forge
 channel_targets:
-- conda-forge python_debug
+- conda-forge python_rc
 cxx_compiler:
-- gxx
+- clangxx
 cxx_compiler_version:
-- '12'
-docker_image:
-- quay.io/condaforge/linux-anvil-aarch64
+- '15'
 expat:
 - '2'
 libffi:
 - '3.4'
-libuuid:
-- '2'
+macos_machine:
+- x86_64-apple-darwin13.4.0
 ncurses:
 - '6'
 openssl:
@@ -43,7 +39,7 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- linux-aarch64
+- osx-64
 tk:
 - '8.6'
 xz:
