--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set version = "3.12.0" %}
-{% set dev = "rc1" %}
-{% set dev_ = "rc1_" %}
+{% set dev = "rc2" %}
+{% set dev_ = "rc2_" %}
 {% set ver2 = '.'.join(version.split('.')[0:2]) %}
 {% set ver2nd = ''.join(version.split('.')[0:2]) %}
 {% set ver3nd = ''.join(version.split('.')[0:3]) %}
@@ -45,8 +45,8 @@ source:
     git_tag: v{{ version }}{{ dev }}
 {% else %}
   - url: https://www.python.org/ftp/python/{{ version }}/Python-{{ version }}{{ dev }}.tar.xz
-    # md5 from: https://www.python.org/downloads/release/python-{{ ver3nd }}/
-    md5: 6085d285160b2c94e1239d0afd42fdc8
+    # md5 from: https://www.python.org/downloads/release/python-{{ ver3nd }}{{ dev }}/
+    md5: c6da177d411956a24f15988e22dcfdb8
 {% endif %}
     patches:
       - patches/0001-Win32-Change-FD_SETSIZE-from-512-to-2048.patch
