Run checksharedmods for native and emulated

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -70,7 +70,7 @@ source:
       - patches/0024-Do-not-pass-g-to-GCC-when-not-Py_DEBUG.patch
       - patches/0025-Unvendor-expat.patch
       - patches/0026-Remove-unused-readelf.patch
-      - patches/0027-Don-t-checksharedmods.patch  # [build_platform != target_platform]
+      - patches/0027-Don-t-checksharedmods.patch
       - patches/0028-Override-configure-LIBFFI.patch
 
 build:
