--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -44,9 +44,9 @@ source:
   - url: https://github.com/python/cpython-source-deps/archive/bsddb-4.7.25.0.zip   # [win]
     folder: externals/bsddb-4.7.25.0                                                # [win]
     sha256: 0bc1f79d2bbff8159cf56103db615cc011458b7b0f5fc4c8c3db3132f026abbc        # [win]
-  - url: https://github.com/python/cpython-source-deps/archive/openssl-1.0.2o.zip   # [win]
-    folder: externals/openssl-1.0.2o                                                # [win]
-    sha256: 9db2a35ef254b57e16a47916810a3bf1cd639b512b5fe6c1cb51afc985113595        # [win]
+  - url: https://github.com/python/cpython-source-deps/archive/openssl-1.1.1u.zip   # [win]
+    folder: externals/openssl-1.1.1u                                                # [win]
+    sha256: f2463948d3a40d030b36c9794f82dc2b7b97db4b8c869507efa21eed574301d8        # [win]
   - url: https://github.com/python/cpython-source-deps/archive/sqlite-3.14.2.0.zip  # [win]
     folder: externals/sqlite-3.14.2.0                                               # [win]
     sha256: c1ff98c76c11dc10b2abe94d72ea5bae7da64ba8da9455a9af5dc3eae0f2f880        # [win]
