fix: use older openssl for compatibility

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,2 +1,2 @@
 openssl:                             # [unix]
-  - 1.1.1                            # [unix]
+  - 1.1.1u                           # [unix]
