issue has been closed

--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -15,4 +15,4 @@ github:
   tooling_branch_name: main
 conda_build:
   pkg_format: '2'
-remote_ci_setup: ["conda-forge-ci-setup=3", "libsolv<0.7.23"]  # https://github.com/conda/conda-build/issues/4750
+remote_ci_setup: ["conda-forge-ci-setup=3"]
