MNT: Re-rendered with conda-build 3.25.0, conda-smithy 3.26.2, and conda-forge-pinning 2023.09.23.18.20.25

--- a/.ci_support/linux_64_build_typedebugchannel_targetsconda-forge_python_rc_debug.yaml
+++ b/.ci_support/linux_64_build_typedebugchannel_targetsconda-forge_python_rc_debug.yaml
@@ -9,7 +9,7 @@ c_compiler_version:
 cdt_name:
 - cos6
 channel_sources:
-- conda-forge
+- conda-forge/label/python_rc,conda-forge
 channel_targets:
 - conda-forge python_rc_debug
 cxx_compiler:
