--- a/.ci_support/linux_aarch64_build_typedebugchannel_targetsconda-forge_python_rc_debug.yaml
+++ b/.ci_support/linux_aarch64_build_typedebugchannel_targetsconda-forge_python_rc_debug.yaml
@@ -13,7 +13,7 @@ cdt_arch:
 cdt_name:
 - cos7
 channel_sources:
-- conda-forge
+- conda-forge/label/python_rc,conda-forge
 channel_targets:
 - conda-forge python_rc_debug
 cxx_compiler:
