--- a/.ci_support/osx_64_build_typedebugchannel_targetsconda-forge_python_rc_debug.yaml
+++ b/.ci_support/osx_64_build_typedebugchannel_targetsconda-forge_python_rc_debug.yaml
@@ -11,7 +11,7 @@ c_compiler:
 c_compiler_version:
 - '15'
 channel_sources:
-- conda-forge
+- conda-forge/label/python_rc,conda-forge
 channel_targets:
 - conda-forge python_rc_debug
 cxx_compiler:
