--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -5,9 +5,9 @@ bzip2:
 c_compiler:
 - vs2019
 channel_sources:
-- conda-forge
+- conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge python_rc
+- conda-forge main
 cxx_compiler:
 - vs2019
 expat:
