--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -13,7 +13,7 @@ channel_sources:
   - conda-forge/label/python_rc,conda-forge
 channel_targets:
   - conda-forge main
-  - conda-forge python_rc_debug   # [not win]
+  - conda-forge python_debug   # [not win]
 zip_keys:
   - build_type
   - channel_targets
