--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -10,3 +10,7 @@ cxx_compiler:                  # [win]
   - vs2017                     # [win]
 vc:                            # [win]
   - 14.1                       # [win]
+c_compiler_version:            # [osx and x86_64]
+  - 15                         # [osx and x86_64]
+cxx_compiler_version:          # [osx and x86_64]
+  - 15                         # [osx and x86_64]
