Add test for ncurses wide character support
Signed-off-by: Marcel Bargull <marcel.bargull@udo.edu>

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -254,6 +254,8 @@ outputs:
         - test ! -f default.profraw   # [osx]
         # Test for segfault on osx-64 with libffi=3.4, see https://bugs.python.org/issue44556
         - python -c "from ctypes import CFUNCTYPE; CFUNCTYPE(None)(id)"
+        # Test for wide character supported via ncursesw
+        - TERM=xterm >/dev/null python -c "import curses; scr = curses.initscr(); curses.unget_wch('x'); assert 'x' ==  scr.get_wch()"  # [unix]
 
   - name: libpython-static
     script: build_static.sh  # [unix]
