--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,17 +1,14 @@
 python:
-  - 3.12
+  - 3.9
 python_impl:
   - cpython
 numpy:
   - 1.16
+c_compiler:                    # [win]
+  - vs2017                     # [win]
+cxx_compiler:                  # [win]
+  - vs2017                     # [win]
+vc:                            # [win]
+  - 14.1                       # [win]
 MACOSX_SDK_VERSION:            # [osx and x86_64]
   - 11.0                       # [osx and x86_64]
-build_type:
-  - release
-  - debug                      # [not win]
-channel_targets:
-  - conda-forge main
-  - conda-forge python_debug   # [not win]
-zip_keys:
-  - build_type
-  - channel_targets
