--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -2,3 +2,7 @@ provider: {linux_aarch64: default, linux_ppc64le: default}
 conda_forge_output_validation: true
 conda_build:
   pkg_format: '2'
+azure:
+  settings-win:
+    pool:
+      vmImage: vs2017-win2016
