--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -75,7 +75,7 @@ source:
     sha256: de3c87b26a80e789986d8e6950c6304175d3829afe9c6c7211eb7257266ab0ac         # [win]
 
 build:
-  number: 100
+  number: 101
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
@@ -139,6 +139,7 @@ requirements:
     - ncurses  # [not win]
     - libffi  # [not win]
     - libnsl  # [linux]
+    - libxcrypt  # [linux]
     - ld_impl_{{ target_platform }} >=2.34  # [linux]
   run:
     - ld_impl_{{ target_platform }} >=2.34  # [linux]
