MNT: Re-rendered with conda-build 3.28.4, conda-smithy 3.30.4, and conda-forge-pinning 2024.02.15.21.12.40

--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -3,6 +3,6 @@ conda_forge_output_validation: true
 conda_build:
   pkg_format: '2'
 azure:
-  settings-win:
+  settings_win:
     pool:
       vmImage: vs2017-win2016
