--- a/.ci_support/linux_64_openssl3.yaml
+++ b/.ci_support/linux_64_openssl3.yaml
@@ -1,30 +1,46 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
 bzip2:
 - '1'
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '16'
+- '9'
+cdt_name:
+- cos6
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- clangxx
+- gxx
 cxx_compiler_version:
-- '16'
+- '9'
+docker_image:
+- quay.io/condaforge/linux-anvil-comp7
 libffi:
 - '3.4'
-macos_machine:
-- x86_64-apple-darwin13.4.0
 ncurses:
-- '6'
+- '6.2'
 openssl:
 - '3'
 pin_run_as_build:
+  bzip2:
+    max_pin: x
+  libffi:
+    max_pin: x.x
+  ncurses:
+    max_pin: x.x
   python:
     min_pin: x.x
+    max_pin: x.x
+  readline:
+    max_pin: x
+  sqlite:
+    max_pin: x
+  tk:
+    max_pin: x.x
+  xz:
+    max_pin: x.x
+  zlib:
     max_pin: x.x
 python:
 - '3.7'
@@ -33,13 +49,15 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- osx-64
+- linux-64
 tk:
 - '8.6'
 xz:
-- '5'
+- '5.2'
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
+- - cdt_name
+  - docker_image
 zlib:
 - '1.2'
