--- a/.ci_support/linux_aarch64_openssl3.yaml
+++ b/.ci_support/linux_aarch64_openssl3.yaml
@@ -1,11 +1,15 @@
+BUILD:
+- aarch64-conda_cos7-linux-gnu
 bzip2:
 - '1'
 c_compiler:
 - gcc
 c_compiler_version:
-- '12'
+- '9'
+cdt_arch:
+- aarch64
 cdt_name:
-- cos6
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
@@ -13,18 +17,34 @@ channel_targets:
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '12'
+- '9'
 docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+- quay.io/condaforge/linux-anvil-aarch64
 libffi:
 - '3.4'
 ncurses:
-- '6'
+- '6.2'
 openssl:
 - '3'
 pin_run_as_build:
+  bzip2:
+    max_pin: x
+  libffi:
+    max_pin: x.x
+  ncurses:
+    max_pin: x.x
   python:
     min_pin: x.x
+    max_pin: x.x
+  readline:
+    max_pin: x
+  sqlite:
+    max_pin: x
+  tk:
+    max_pin: x.x
+  xz:
+    max_pin: x.x
+  zlib:
     max_pin: x.x
 python:
 - '3.7'
@@ -33,11 +53,11 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- linux-64
+- linux-aarch64
 tk:
 - '8.6'
 xz:
-- '5'
+- '5.2'
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
