--- a/.ci_support/osx_64_openssl1.1.1.yaml
+++ b/.ci_support/osx_64_openssl1.1.1.yaml
@@ -1,30 +1,46 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
 bzip2:
 - '1'
 c_compiler:
-- gcc
+- clang
 c_compiler_version:
-- '12'
-cdt_name:
-- cos7
+- '11'
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- gxx
+- clangxx
 cxx_compiler_version:
-- '12'
-docker_image:
-- quay.io/condaforge/linux-anvil-ppc64le
+- '11'
 libffi:
 - '3.4'
+macos_machine:
+- x86_64-apple-darwin13.4.0
 ncurses:
-- '6'
+- '6.2'
 openssl:
-- '3'
+- 1.1.1
 pin_run_as_build:
+  bzip2:
+    max_pin: x
+  libffi:
+    max_pin: x.x
+  ncurses:
+    max_pin: x.x
   python:
     min_pin: x.x
+    max_pin: x.x
+  readline:
+    max_pin: x
+  sqlite:
+    max_pin: x
+  tk:
+    max_pin: x.x
+  xz:
+    max_pin: x.x
+  zlib:
     max_pin: x.x
 python:
 - '3.7'
@@ -33,9 +49,11 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- linux-ppc64le
+- osx-64
+tk:
+- '8.6'
 xz:
-- '5'
+- '5.2'
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
