--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -8,7 +8,10 @@ jobs:
     vmImage: windows-2019
   strategy:
     matrix:
-      win_64_:
+      win_64_openssl3:
+        CONFIG: win_64_
+        UPLOAD_PACKAGES: 'True'
+      win_64_openssl1.1.1:
         CONFIG: win_64_
         UPLOAD_PACKAGES: 'True'
   timeoutInMinutes: 360
