Use a cbc for pinning to older builds

--- a/.azure-pipelines/azure-pipelines-osx.yml
+++ b/.azure-pipelines/azure-pipelines-osx.yml
@@ -8,13 +8,14 @@ jobs:
     vmImage: macOS-11
   strategy:
     matrix:
-      osx_64_openssl3:
-        CONFIG: osx_64_openssl3
-        UPLOAD_PACKAGES: 'True'
       osx_64_openssl1.1.1:
         CONFIG: osx_64_openssl1.1.1
         UPLOAD_PACKAGES: 'True'
+      osx_64_openssl3:
+        CONFIG: osx_64_openssl3
+        UPLOAD_PACKAGES: 'True'
   timeoutInMinutes: 360
+  variables: {}
 
   steps:
   # TODO: Fast finish on azure pipelines?
