--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -4,3 +4,20 @@ python_impl:
   - cpython
 numpy:
   - 1.16
+openssl:
+  - 3
+  - 1.1.1
+c_compiler:            # [win]
+  - vs2017             # [win]
+c_compiler_version:    # [unix]
+  - 9                  # [linux]
+  - 11                 # [osx]
+cxx_compiler:          # [win]
+  - vs2017             # [win]
+cxx_compiler_version:  # [unix]
+  - 9                  # [linux]
+  - 11                 # [osx]
+ncurses:
+  - 6.2
+xz:
+  - 5.2
