--- a/.ci_support/linux_64_build_typedebugchannel_targetsconda-forge_python_313a4_debug.yaml
+++ b/.ci_support/linux_64_build_typedebugchannel_targetsconda-forge_python_313a4_debug.yaml
@@ -9,9 +9,9 @@ c_compiler_version:
 cdt_name:
 - cos6
 channel_sources:
-- conda-forge
+- conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge python_debug
+- conda-forge python_313a4_debug
 cxx_compiler:
 - gxx
 cxx_compiler_version:
