--- a/.ci_support/linux_64_build_typereleasechannel_targetsconda-forge_python_313a4.yaml
+++ b/.ci_support/linux_64_build_typereleasechannel_targetsconda-forge_python_313a4.yaml
@@ -1,27 +1,23 @@
-BUILD:
-- aarch64-conda_cos7-linux-gnu
 build_type:
-- debug
+- release
 bzip2:
 - '1'
 c_compiler:
 - gcc
 c_compiler_version:
 - '12'
-cdt_arch:
-- aarch64
 cdt_name:
-- cos7
+- cos6
 channel_sources:
-- conda-forge
+- conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge python_debug
+- conda-forge python_313a4
 cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '12'
 docker_image:
-- quay.io/condaforge/linux-anvil-aarch64
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 expat:
 - '2'
 libffi:
@@ -43,7 +39,7 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- linux-aarch64
+- linux-64
 tk:
 - '8.6'
 xz:
