--- a/.ci_support/linux_aarch64_build_typedebugchannel_targetsconda-forge_python_313a4_debug.yaml
+++ b/.ci_support/linux_aarch64_build_typedebugchannel_targetsconda-forge_python_313a4_debug.yaml
@@ -1,23 +1,27 @@
+BUILD:
+- aarch64-conda_cos7-linux-gnu
 build_type:
-- release
+- debug
 bzip2:
 - '1'
 c_compiler:
 - gcc
 c_compiler_version:
 - '12'
+cdt_arch:
+- aarch64
 cdt_name:
 - cos7
 channel_sources:
-- conda-forge
+- conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge main
+- conda-forge python_313a4_debug
 cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '12'
 docker_image:
-- quay.io/condaforge/linux-anvil-ppc64le
+- quay.io/condaforge/linux-anvil-aarch64
 expat:
 - '2'
 libffi:
@@ -39,7 +43,9 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- linux-ppc64le
+- linux-aarch64
+tk:
+- '8.6'
 xz:
 - '5'
 zip_keys:
