--- a/.ci_support/linux_ppc64le_build_typereleasechannel_targetsconda-forge_python_313a4.yaml
+++ b/.ci_support/linux_ppc64le_build_typereleasechannel_targetsconda-forge_python_313a4.yaml
@@ -1,5 +1,3 @@
-BUILD:
-- aarch64-conda_cos7-linux-gnu
 build_type:
 - release
 bzip2:
@@ -8,20 +6,18 @@ c_compiler:
 - gcc
 c_compiler_version:
 - '12'
-cdt_arch:
-- aarch64
 cdt_name:
 - cos7
 channel_sources:
-- conda-forge
+- conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge main
+- conda-forge python_313a4
 cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '12'
 docker_image:
-- quay.io/condaforge/linux-anvil-aarch64
+- quay.io/condaforge/linux-anvil-ppc64le
 expat:
 - '2'
 libffi:
@@ -43,9 +39,7 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- linux-aarch64
-tk:
-- '8.6'
+- linux-ppc64le
 xz:
 - '5'
 zip_keys:
