MNT: Re-rendered with conda-build 24.3.0, conda-smithy 3.35.0, and conda-forge-pinning 2024.05.01.09.10.47

--- a/.ci_support/linux_64_build_typereleasechannel_targetsconda-forge_python_313a5.yaml
+++ b/.ci_support/linux_64_build_typereleasechannel_targetsconda-forge_python_313a5.yaml
@@ -1,5 +1,5 @@
 build_type:
-- debug
+- release
 bzip2:
 - '1'
 c_compiler:
@@ -11,7 +11,7 @@ cdt_name:
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge python_313a4_debug
+- conda-forge python_313a5
 cxx_compiler:
 - gxx
 cxx_compiler_version:
