--- a/.ci_support/linux_64_build_typedebugchannel_targetsconda-forge_python_313a5_debug.yaml
+++ b/.ci_support/linux_64_build_typedebugchannel_targetsconda-forge_python_313a5_debug.yaml
@@ -1,27 +1,29 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '11.0'
 build_type:
 - debug
 bzip2:
 - '1'
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '16'
+- '12'
+cdt_name:
+- cos6
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge python_313a4_debug
+- conda-forge python_313a5_debug
 cxx_compiler:
-- clangxx
+- gxx
 cxx_compiler_version:
-- '16'
+- '12'
+docker_image:
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 expat:
 - '2'
 libffi:
 - '3.4'
-macos_machine:
-- arm64-apple-darwin20.0.0
+libuuid:
+- '2'
 ncurses:
 - '6'
 openssl:
@@ -37,7 +39,7 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- osx-arm64
+- linux-64
 tk:
 - '8.6'
 xz:
