--- a/.ci_support/linux_ppc64le_build_typedebugchannel_targetsconda-forge_python_313a5_debug.yaml
+++ b/.ci_support/linux_ppc64le_build_typedebugchannel_targetsconda-forge_python_313a5_debug.yaml
@@ -1,5 +1,5 @@
 build_type:
-- release
+- debug
 bzip2:
 - '1'
 c_compiler:
@@ -11,7 +11,7 @@ cdt_name:
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge python_313a4
+- conda-forge python_313a5_debug
 cxx_compiler:
 - gxx
 cxx_compiler_version:
