--- a/.ci_support/linux_ppc64le_build_typereleasechannel_targetsconda-forge_python_313a5.yaml
+++ b/.ci_support/linux_ppc64le_build_typereleasechannel_targetsconda-forge_python_313a5.yaml
@@ -1,27 +1,29 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '11.0'
 build_type:
 - release
 bzip2:
 - '1'
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '16'
+- '12'
+cdt_name:
+- cos7
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge python_313a4
+- conda-forge python_313a5
 cxx_compiler:
-- clangxx
+- gxx
 cxx_compiler_version:
-- '16'
+- '12'
+docker_image:
+- quay.io/condaforge/linux-anvil-ppc64le
 expat:
 - '2'
 libffi:
 - '3.4'
-macos_machine:
-- arm64-apple-darwin20.0.0
+libuuid:
+- '2'
 ncurses:
 - '6'
 openssl:
@@ -37,9 +39,7 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- osx-arm64
-tk:
-- '8.6'
+- linux-ppc64le
 xz:
 - '5'
 zip_keys:
