--- a/.ci_support/osx_arm64_build_typereleasechannel_targetsconda-forge_python_313a5.yaml
+++ b/.ci_support/osx_arm64_build_typereleasechannel_targetsconda-forge_python_313a5.yaml
@@ -1,6 +1,4 @@
 MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
-MACOSX_SDK_VERSION:
 - '11.0'
 build_type:
 - release
@@ -13,7 +11,7 @@ c_compiler_version:
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge python_313a4
+- conda-forge python_313a5
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
@@ -23,7 +21,7 @@ expat:
 libffi:
 - '3.4'
 macos_machine:
-- x86_64-apple-darwin13.4.0
+- arm64-apple-darwin20.0.0
 ncurses:
 - '6'
 openssl:
@@ -39,7 +37,7 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- osx-64
+- osx-arm64
 tk:
 - '8.6'
 xz:
