--- a/.ci_support/linux_64_build_typedebugchannel_targetsconda-forge_python_313b1_debug.yaml
+++ b/.ci_support/linux_64_build_typedebugchannel_targetsconda-forge_python_313b1_debug.yaml
@@ -1,5 +1,5 @@
 build_type:
-- release
+- debug
 bzip2:
 - '1'
 c_compiler:
@@ -9,19 +9,19 @@ c_compiler_version:
 c_stdlib:
 - sysroot
 c_stdlib_version:
-- '2.17'
+- '2.12'
 cdt_name:
-- cos7
+- cos6
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge python_313a5
+- conda-forge python_313b1_debug
 cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '12'
 docker_image:
-- quay.io/condaforge/linux-anvil-ppc64le
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 expat:
 - '2'
 libffi:
@@ -43,7 +43,9 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- linux-ppc64le
+- linux-64
+tk:
+- '8.6'
 xz:
 - '5'
 zip_keys:
