--- a/.ci_support/linux_64_build_typereleasechannel_targetsconda-forge_python_313b1.yaml
+++ b/.ci_support/linux_64_build_typereleasechannel_targetsconda-forge_python_313b1.yaml
@@ -1,7 +1,5 @@
-BUILD:
-- aarch64-conda_cos7-linux-gnu
 build_type:
-- debug
+- release
 bzip2:
 - '1'
 c_compiler:
@@ -11,21 +9,19 @@ c_compiler_version:
 c_stdlib:
 - sysroot
 c_stdlib_version:
-- '2.17'
-cdt_arch:
-- aarch64
+- '2.12'
 cdt_name:
-- cos7
+- cos6
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge python_313a5_debug
+- conda-forge python_313b1
 cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '12'
 docker_image:
-- quay.io/condaforge/linux-anvil-aarch64
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 expat:
 - '2'
 libffi:
@@ -47,7 +43,7 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- linux-aarch64
+- linux-64
 tk:
 - '8.6'
 xz:
