--- a/.ci_support/linux_aarch64_build_typedebugchannel_targetsconda-forge_python_313b1_debug.yaml
+++ b/.ci_support/linux_aarch64_build_typedebugchannel_targetsconda-forge_python_313b1_debug.yaml
@@ -1,3 +1,5 @@
+BUILD:
+- aarch64-conda_cos7-linux-gnu
 build_type:
 - debug
 bzip2:
@@ -9,19 +11,21 @@ c_compiler_version:
 c_stdlib:
 - sysroot
 c_stdlib_version:
-- '2.12'
+- '2.17'
+cdt_arch:
+- aarch64
 cdt_name:
-- cos6
+- cos7
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge python_313a5_debug
+- conda-forge python_313b1_debug
 cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '12'
 docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+- quay.io/condaforge/linux-anvil-aarch64
 expat:
 - '2'
 libffi:
@@ -43,7 +47,7 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- linux-64
+- linux-aarch64
 tk:
 - '8.6'
 xz:
