--- a/.ci_support/linux_ppc64le_build_typereleasechannel_targetsconda-forge_python_313b1.yaml
+++ b/.ci_support/linux_ppc64le_build_typereleasechannel_targetsconda-forge_python_313b1.yaml
@@ -1,5 +1,3 @@
-BUILD:
-- aarch64-conda_cos7-linux-gnu
 build_type:
 - release
 bzip2:
@@ -12,20 +10,18 @@ c_stdlib:
 - sysroot
 c_stdlib_version:
 - '2.17'
-cdt_arch:
-- aarch64
 cdt_name:
 - cos7
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge python_313a5
+- conda-forge python_313b1
 cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '12'
 docker_image:
-- quay.io/condaforge/linux-anvil-aarch64
+- quay.io/condaforge/linux-anvil-ppc64le
 expat:
 - '2'
 libffi:
@@ -47,9 +43,7 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- linux-aarch64
-tk:
-- '8.6'
+- linux-ppc64le
 xz:
 - '5'
 zip_keys:
