--- a/.ci_support/osx_64_build_typereleasechannel_targetsconda-forge_python_313b1.yaml
+++ b/.ci_support/osx_64_build_typereleasechannel_targetsconda-forge_python_313b1.yaml
@@ -1,4 +1,6 @@
 MACOSX_DEPLOYMENT_TARGET:
+- '10.13'
+MACOSX_SDK_VERSION:
 - '11.0'
 build_type:
 - release
@@ -11,11 +13,11 @@ c_compiler_version:
 c_stdlib:
 - macosx_deployment_target
 c_stdlib_version:
-- '11.0'
+- '10.13'
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge python_313a5
+- conda-forge python_313b1
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
@@ -25,7 +27,7 @@ expat:
 libffi:
 - '3.4'
 macos_machine:
-- arm64-apple-darwin20.0.0
+- x86_64-apple-darwin13.4.0
 ncurses:
 - '6'
 openssl:
@@ -41,7 +43,7 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- osx-arm64
+- osx-64
 tk:
 - '8.6'
 xz:
