conda-forge specific stuff

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -92,18 +92,13 @@ outputs:
       skip: true  # [win and int(float(vc)) < 14]
       skip_compile_pyc:
         - '*.py'            # [build_platform != target_platform]
-      string: {{ dev_ }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ debug }}_cpython  # ["conda-forge" in (channel_targets or "")]
-      string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ debug }}  # ["conda-forge" not in (channel_targets or "")]
-{% if 'conda-forge' in channel_targets %}
+      string: {{ dev_ }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ debug }}_cpython
       run_exports:
         noarch:
           - python
         weak:
           - python_abi {{ ver2 }}.* *_cp{{ ver2nd }}
-{% if py_interp_debug == "yes" %}
           - python {{ ver2 }}.* *_debug_cpython
-{% endif %}
-{% endif %}
       script_env:
         - PY_INTERP_DEBUG={{ py_interp_debug }}
         # Putting these here means they get emitted to build_env_setup.{sh,bat} meaning we can launch IDEs
@@ -132,9 +127,7 @@ outputs:
         # configure script looks for llvm-ar for lto
         - llvm-tools  # [osx]
         - ld_impl_{{ target_platform }}  # [linux]
-{% if 'conda-forge' in channel_targets %}
         - binutils_impl_{{ target_platform }}  # [linux]
-{% endif %}
         - tk        # [build_platform != target_platform]
         - readline  # [build_platform != target_platform]
         - ncurses   # [build_platform != target_platform]
@@ -159,10 +152,8 @@ outputs:
 {% if dev != '' %}
         - _python_rc
 {% endif %}
-{% if 'conda-forge' in channel_targets %}
       run_constrained:
         - python_abi {{ ver2 }}.* *_cp{{ ver2nd }}
-{% endif %}
     test:
       downstreams:
         - cython
@@ -241,8 +232,7 @@ outputs:
         - python_abi
       script_env:
         - PY_INTERP_DEBUG={{ py_interp_debug }}
-      string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ debug }}_cpython  # ["conda-forge" in (channel_targets or "")]
-      string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ debug }}  # ["conda-forge" not in (channel_targets or "")]
+      string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ debug }}_cpython
     requirements:
       build:
         - {{ compiler('c') }}
